assets/css/style.css
/* 
Base components
*/

@font-face {
    font-family: 'Space Grotesk';
    font-weight: 200;
    font-display: auto;
    src:  url('/assets/fonts/SpaceGrotesk-Light.woff2') format('woff2'),
    url('/assets/fonts/SpaceGrotesk-Light.woff') format('woff');
         
  }
  @font-face {
    font-family: 'Space Grotesk';
    font-weight: 400;
    font-display: auto;
    src:  url('/assets/fonts/SpaceGrotesk-Regular.woff2') format('woff2'),
    url('/assets/fonts/SpaceGrotesk-Regular.woff') format('woff');
         
  }
  
  @font-face {
    font-family: 'Space Grotesk';
    font-weight: 500;
    font-display: auto;
    src:  url('/assets/fonts/SpaceGrotesk-Medium.woff2') format('woff2'),
    url('/assets/fonts/SpaceGrotesk-Medium.woff') format('woff');
         
  }
  
  @font-face {
    font-family: 'Space Grotesk';
    font-weight: 600;
    font-display: auto;
    src:  url('/assets/fonts/SpaceGrotesk-Semibold.woff2') format('woff2'),
    url('/assets/fonts/SpaceGrotesk-Semibold.woff') format('woff');
         
  }
  
  
  @font-face {
    font-family: 'Space Grotesk';
    font-weight: 700;
    font-display: auto;
    src:  url('/assets/fonts/SpaceGrotesk-Bold.woff2') format('woff2'),
    url('/assets/fonts/SpaceGrotesk-Bold.woff') format('woff');
         
  }
  
  
  html {
    scroll-behavior: smooth;
  font-family: "Space Grotesk";
  transition: all 0.3s;
  
  }
  body {
    margin: 0;
  }
  
  canvas {
    width: 100%;
    height: 100vh;
    z-index: -2;
     opacity: 0.8; 
    margin-bottom: -6px;
  }
  
  
  h1 {
  font-size: 10rem;
  line-height: 1.25;
  margin: 0;
  font-weight: 700;
  letter-spacing: -4px;
  
  }
  i {
color: #666;
  }
  p {
      margin: 0;
      font-size: 1.5rem;
      line-height: 1.5;
  }
  a {
      text-decoration: none;
      color: blue;
   
      line-height: 0;
  
  transition: all 0.15s;
  
  }

  
  h2 {
      font-size: 4rem;
      font-weight: 500;
      letter-spacing: -1px;
        margin: 0;
        line-height: 1.35;
  }


  aside {
      font-size: 1.5rem;
  }

  ul {
      padding: 0;
      margin: 0;
  }
  li {
      list-style: none;
  }


  .links {
      font-size: 2rem;
 
  }

 .BR-mobile-only {
     display: none;
 }
  /* 
  hero components
  */
  .hero {
      width: 100%;
    height: 100vh;
    position: absolute;
  }
  
  .primary-container {
      position: absolute;
      z-index: 1;
      margin: 4rem;
  }
  .secondary-container {
      bottom: 0;
      margin: 4rem;
      position: absolute;
   z-index: 1;
      
  }

  .hero-link {


    padding-top: 2.5rem;
    line-height: 1.25;
    padding-bottom: 1rem;
    transition: all 0.2s;
    transform-origin: left;
}
.hero-link a {
    color: black;

}
.hero-link:hover {
    transform: scale(1.55, 1.15);


}
/* 
//disgusting hack to remove the menu overflow
*/

@media screen and (min-width: 1920px) and (max-height: 1080px ) {
    canvas {
        min-height: 1080px;
    }
    .secondary-container {
        position: relative;
        z-index: 1;
        top: 30rem;
    }
}

@media screen and (min-width: 1280px) and (max-height: 768px ) {
    canvas {
        min-height: 768px;
    }
    .secondary-container {
        position: relative;
        z-index: 1;
        top: 25rem;
    }
}

@media screen and (min-width: 768px) and (max-height: 1024px ) {
    canvas {
        min-height: 768px;
    }
    .secondary-container {
        position: relative;
        z-index: 1;
        top: 25rem;
    }
}




    /* 
  about components
  */


.container-about-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
 
    margin: 0;
    padding: 0;
}
.container-about-grid-content{
    transform: rotate3d(1, 1, 1, -7deg);
 
    margin: 4rem;
    display: grid;
    align-items: center;
}

.container-about-grid-video{
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    transform: rotate3d(-1, -1, 1, 7deg);
}
.list-title {
    margin-top: 5rem;
    font-size: 2rem;
}
.list {
    font-size: 2rem;
    line-height: 1.5;
}


.container-summary {

    color: black;
    text-align: center;
    margin: 4rem;
}

.container-summary h2 {
    padding-top: 0;
}
.container-summary-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 4rem;
    margin: 4rem auto;
    max-width: 1200px;

}
.container-about-video-container { padding: 4rem;}

.container-summary-grid img {
    width: 100%;
}
/* 
stupid crap grid 
*/
.project-title {
  
    height: auto;
    margin: 2rem auto 0 auto;
    padding: 2rem 0;
    text-align: center;
  }
  
.project-container {
    margin: 0 auto;
   
    width: 90vw;
    padding: 4rem;
}
.project-grid-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }


  .project-card {
    width: 100%;
    overflow: hidden;
    height: 100%;
    transition: all 0.25s;
    object-fit: cover;
  }
  .project-card:hover {
    transform: scale(1.05);
    border-radius: 8px;
  }

/* //projects */

.container-project-template-1 {
    margin: 16rem 4rem;
}

.container-project-grid {
    margin-top: 4rem;
    display: grid;
    grid-template-columns: 27rem 1fr;
    max-width: 1920px;
    margin: 2rem auto;
    column-gap: 4rem;
    padding-top: 2rem;
}
.container-project-content {
    max-width: 1000px;
}

.container-project-img-1 { 
    margin: 0 auto;
    width: 100%;
    display: block;
    max-width: 1920px;
}

.project-info-side {
    color: #555;
}




@media only screen and (min-width: 1920px) {
    .project-grid-container {
        
  grid-template-columns: repeat( auto-fit, minmax(400px, 1fr) );
    }
}

  @media only screen and (max-width: 1920px) {
      h1 {
          font-size: 8rem;
          letter-spacing: -2px;
      }
      h2 {
          font-size: 3rem;
          letter-spacing: -1px;
      }
      .secondary-container {
          margin-top: 2rem;
      }
  
  }
  
  @media only screen and (max-width: 1600px) {
      h1 {
          font-size: 7rem;
          letter-spacing: -2px;
      }
      h2 {
          font-size: 2.5rem;
       
      }
      .secondary-container {
          margin-top: 2rem;
      }
      .hero-link {
          padding-top: 1.5rem;
      }
  
  }
  
  @media only screen and (max-width: 1280px) {
      h1 {
          font-size: 6rem;
          letter-spacing: -2px;
      }
      h2 {
         
          font-size: 3rem;
      }
      .hero-link {
        padding-top: 2rem;
      }
      .primary-container, .secondary-container {
          margin: 3rem;
      }

.container-project-grid { 
    column-gap: 2rem;
}

      
.container-about-grid-content{

        order: -1;
      }

.container-about-grid { 
    grid-template-columns: 1fr;
}
.project-container {
    width: auto;
    margin: 2rem;
    padding: 0;
}
.project-grid-container {
  
    grid-template-columns: 1fr 1fr 1fr;
    max-width: initial;
  
  }
  }

  @media screen and (max-width: 1024px) {
   
      canvas {
          min-height: 650px;
      }
      .secondary-container {
        position: relative;
        display: block;
        z-index: 1;
        top: 15rem;
    }
      .container-project-grid {
          grid-template-columns: 1fr;
          row-gap: 2rem;
          margin-top: 0;
      }
 
  }
  
  @media only screen and (max-width: 768px) {
      h1 {
          font-size: 5rem;
          letter-spacing: -2px;
      }
      h2 {
          
          font-size: 3rem;
      }
      .primary-container, .secondary-container {
          margin: 3rem;
      }
      .links {
        line-height: 2.5;
      }

      .container-project-template-1 {
        margin: 6rem 0rem;
    }
    .container-project-grid {

        padding-top: 1rem;
        margin: 1rem 1.5rem;
      }
      .project-grid-container {
  
        grid-template-columns: 1fr 1fr;
      
      
      }
  }
  
  @media only screen and (max-width: 601px) {
  
      h1 {
          font-size: 3rem;
          letter-spacing: -2px;
      }
      h2 {
        
          font-size: 2.5rem;
  
          letter-spacing: -0.5px;
      }
      p {
          font-size: 1.25rem;
      }
      .secondary-container {
          top: 10rem;
          bottom: initial;
          position: relative;
      }
      .hero-link {
        padding-top: 1rem;
      }
      .hero {
          min-height: 600px;
      }
      canvas {
          min-height: 600px;
      }
      aside {
          margin-bottom: 0;
      }
      .primary-container, .secondary-container {
          margin: 1rem;
      }
      .secondary-container {
          margin-bottom: 9rem;
      }

      .container-about-grid { 
          margin: 2rem auto;
          padding: 2rem;
      }
    
      .container-about-grid-content{
        margin: initial;
        margin-bottom: 2rem;
    }
    .project-grid-container {
  
        grid-template-columns: 1fr;
        row-gap: 2rem;
      
      
      }
    .container-about-video-container {
padding: 0;
    }
  
    .container-project-template-1 {
        margin: 6rem 0rem;
    }
    .container-project-grid {
        margin: 0 2rem;
    }

    .links {
        font-size: 1.25rem;
       
    }
    .list-title {
        font-size: 1.25rem;
    }
    .list {
        font-size: 1.25rem;
        line-height: 1.25;
    }

    .container-project-template-1 {
        margin: 6rem 0rem;
    }
    .container-project-grid {
        margin: 0 1.5rem;
    }
    .hero-title {
        font-size: 2rem;
    }
    .container-summary {margin: 2rem}

    .hero-link:hover {
        transform: scale(1.25, 1.15);
    
    
    }

    .project-card:hover {
        transform: none;
      }

      .BR-mobile-only {
        display: block;
    }
    .container-summary  {
        text-align: left;
    }
  }
  
  
  @media only screen and (max-width: 320px) {
      h1 {
          font-size: 2.5rem;
          letter-spacing: -2px;
      }
      h2 {
          font-size: 1.25rem;
          letter-spacing: -0.6px;
      }
      .primary-container, .secondary-container {
          margin: 1rem;
      }
      .secondary-container {
          margin-bottom: 6rem;
      }

   
  
  }  

  
  
  
  .placeholder {
    width: 100vw;
    height: 100vh;
    background-color: plum;
    display: grid;
}
.placeholderTitle {
    display: grid;
    place-self: center;
    font-size: 4rem;
    filter: invert(100%);

}
.placeholder2 {
    width: 100vw;
    height: 100vh;
    background-color: purple;
    display: grid;
}

